--- a/main.css
+++ b/main.css
@@ -135,11 +135,11 @@ img.profile-pic {
 }
 
 .bg-color-black {
-	background-color: #000000;
+	background-color: black;
 }
 
 .bg-color-white {
-	background-color: white;
+	background-color: #000000;
 }
 
 .text-name {
